--- a/client/src/styles/ProjectKanban.scss
+++ b/client/src/styles/ProjectKanban.scss
@@ -1,7 +1,7 @@
 @use './base';
 
 .project-kanban {
-  height: 100vh;
+  min-height: 100vh;
 
   .project-kanban-header {
     height: auto;
