--- a/client/src/styles/UserDashboard.scss
+++ b/client/src/styles/UserDashboard.scss
@@ -1,7 +1,8 @@
 @use './base';
 
 .userDashboard {
-  padding: 2.5vh 40px;  
+  padding: 2.5vh 40px; 
+  min-height: 94vh;
 }
 
 .userDashboard-header {
